Cabal-version:  2.2
Name:           zureg
Version:        0.1.0.0
Description:    Please see the README on GitHub at <https://github.com/zfoh/zureg#readme>
Homepage:       https://github.com/zfoh/zureg#readme
Bug-reports:    https://github.com/zfoh/zureg/issues
Author:         Jasper Van der Jeugt
Maintainer:     jaspervdj@gmail.com
Copyright:      2018 Jasper Van der Jeugt
License:        BSD-3-Clause
License-file:   LICENSE
Build-type:     Simple
Tested-with:    GHC==8.6.5

Extra-source-files:
  CHANGELOG.md
  README.md
  static/jsQR-807b073.js
  static/scanner.js

Source-repository head
  Type: git
  Location: https://github.com/zfoh/zureg

Library
  Default-language: Haskell2010
  Hs-source-dirs:   lib
  Ghc-options:      -Wall

  Exposed-modules:
    Data.Aeson.TH.Extended
    Zureg.Config
    Zureg.Database
    Zureg.Form
    Zureg.Hackathon
    Zureg.Main.Badges
    Zureg.Main.Email
    Zureg.Main.Export
    Zureg.Main.Lambda
    Zureg.Main.PopWaitlist
    Zureg.Model
    Zureg.Model.Csv
    Zureg.ReCaptcha
    Zureg.SendEmail
    Zureg.SendEmail.Hardcoded
    Zureg.Serverless
    Zureg.Views

  Other-modules:
    Paths_zureg

  Build-depends:
    JuicyPixels              >= 3.2  && < 3.4,
    aeson                    >= 1.3  && < 1.5,
    amazonka                 >= 1.6  && < 1.7,
    amazonka-dynamodb        >= 1.6  && < 1.7,
    amazonka-ses             >= 1.6  && < 1.7,
    array                    >= 0.5  && < 0.6,
    async                    >= 2.2  && < 2.3,
    base                     >= 4.7  && < 5,
    base64-bytestring        >= 1.0  && < 1.1,
    blaze-html               >= 0.9  && < 0.10,
    bytestring               >= 0.10 && < 0.11,
    cassava                  >= 0.5  && < 0.6,
    digestive-functors       >= 0.8  && < 0.9,
    digestive-functors-blaze >= 0.6  && < 0.7,
    directory                >= 1.3  && < 1.4,
    eventful-core            >= 0.2  && < 0.3,
    eventful-dynamodb        >= 0.2  && < 0.3,
    file-embed               >= 0.0  && < 0.1,
    filepath                 >= 1.4  && < 1.5,
    http-client              >= 0.5  && < 0.6,
    http-client-tls          >= 0.3  && < 0.4,
    lens                     >= 4.16 && < 4.18,
    mtl                      >= 2.2  && < 2.3,
    mustache                 >= 2.3  && < 2.4,
    optparse-applicative     >= 0.14 && < 0.15,
    qrcode                   >= 0.1  && < 0.2,
    text                     >= 1.2  && < 1.3,
    time                     >= 1.8  && < 1.9,
    unordered-containers     >= 0.2  && < 0.3,
    urlencoded               >= 0.4  && < 0.5,
    uuid                     >= 1.3  && < 1.4,
    vector                   >= 0.12 && < 1.13
