Cabal-version:  2.2
Name:           zureg
Version:        0.1.0.0
Category:       Application
Synopsis:       Hackathon registration system
Description:    Please see the README on GitHub at <https://github.com/zfoh/zureg#readme>
Homepage:       https://github.com/zfoh/zureg#readme
Bug-reports:    https://github.com/zfoh/zureg/issues
Author:         Jasper Van der Jeugt
Maintainer:     jaspervdj@gmail.com
Copyright:      2018 Jasper Van der Jeugt
License:        BSD-3-Clause
License-file:   LICENSE
Build-type:     Simple
Tested-with:    GHC==8.6.5

Extra-source-files:
  CHANGELOG.md
  README.md
  static/jsQR-807b073.js
  static/scanner.js

Source-repository head
  Type: git
  Location: https://github.com/zfoh/zureg

Library
  Default-language: Haskell2010
  Hs-source-dirs:   lib
  Ghc-options:      -Wall

  Exposed-modules:
    Zureg.Database
    Zureg.Database.Migrations
    Zureg.Form
    Zureg.Hackathon
    Zureg.Hackathon.Interface
    Zureg.Hackathon.ZuriHac2019
    Zureg.Hackathon.ZuriHac2019.Form
    Zureg.Hackathon.ZuriHac2019.Model
    Zureg.Hackathon.ZuriHac2019.Views
    Zureg.Hackathon.ZuriHac2020
    Zureg.Hackathon.ZuriHac2020.Discord
    Zureg.Hackathon.ZuriHac2020.Form
    Zureg.Hackathon.ZuriHac2020.Model
    Zureg.Hackathon.ZuriHac2020.Views
    Zureg.Hackathon.ZuriHac2021
    Zureg.Hackathon.ZuriHac2021.Form
    Zureg.Hackathon.ZuriHac2021.Model
    Zureg.Hackathon.ZuriHac2022
    Zureg.Hackathon.ZuriHac2022.Form
    Zureg.Hackathon.ZuriHac2022.Model
    Zureg.Hackathon.ZuriHac2022.Views
    Zureg.Hackathon.ZuriHac2023
    Zureg.Hackathon.ZuriHac2023.Form
    Zureg.Hackathon.ZuriHac2023.Model
    Zureg.Hackathon.ZuriHac2023.Views
    Zureg.Hackathon.ZuriHac2024
    Zureg.Hackathon.ZuriHac2024.Form
    Zureg.Hackathon.ZuriHac2024.Model
    Zureg.Hackathon.ZuriHac2024.Views
    Zureg.Http
    Zureg.Main.Badges
    Zureg.Main.Email
    Zureg.Main.Export
    Zureg.Main.Janitor
    Zureg.Main.PopWaitlist
    Zureg.Main.Migrate
    Zureg.Main.Web
    Zureg.Model
    Zureg.Model.Csv
    Zureg.Captcha
    Zureg.Captcha.HCaptcha
    Zureg.Captcha.NoCaptcha
    Zureg.Captcha.ReCaptcha
    Zureg.SendEmail
    Zureg.SendEmail.Hardcoded
    Zureg.Views

  Other-modules:
    Data.Aeson.TH.Extended
    Network.AWS.Extended
    Paths_zureg

  Build-depends:
    aeson                    >= 2.1  && < 2.2,
    amazonka                 >= 2.0  && < 2.1,
    amazonka-ses             >= 2.0  && < 2.1,
    async                    >= 2.2  && < 2.3,
    base                     >= 4.7  && < 5,
    blaze-html               >= 0.9  && < 0.10,
    bytestring               >= 0.10 && < 0.13,
    cassava                  >= 0.5  && < 0.6,
    digestive-functors       >= 0.8  && < 0.9,
    digestive-functors-blaze >= 0.6  && < 0.7,
    directory                >= 1.3  && < 1.4,
    file-embed               >= 0.0  && < 0.1,
    filepath                 >= 1.4  && < 1.5,
    http-client              >= 0.5  && < 0.8,
    http-client-tls          >= 0.3  && < 0.4,
    http-types               >= 0.12 && < 0.13,
    lens                     >= 4.16 && < 5.4,
    mtl                      >= 2.2  && < 2.4,
    mustache                 >= 2.3  && < 2.5,
    optparse-applicative     >= 0.14 && < 0.19,
    postgresql-simple        >= 0.7  && < 0.8,
    text                     >= 1.2  && < 2.2,
    time                     >= 1.8  && < 1.15,
    unordered-containers     >= 0.2  && < 0.3,
    uuid                     >= 1.3  && < 1.4,
    vector                   >= 0.12 && < 1.13,
    wai                      >= 3.2  && < 3.3,
    warp                     >= 3.3  && < 3.4

  Autogen-modules:
    Paths_zureg

Common exe
  Default-language: Haskell2010
  Hs-source-dirs:   src
  Ghc-options:      -threaded -rtsopts -with-rtsopts=-N -Wall
  Build-depends:    base, zureg

Executable zureg-export
  Import:  exe
  Main-is: Export.hs

Executable zureg-web
  Import:  exe
  Main-is: Web.hs

Executable zureg-email
  Import:  exe
  Main-is: Email.hs

Executable zureg-pop-waitlist
  Import:  exe
  Main-is: PopWaitlist.hs

-- Executable zureg-projects-page
--   Import:  exe
--   Main-is: ProjectsPage.hs

Executable zureg-badges
  Import:  exe
  Main-is: Badges.hs

Executable zureg-janitor
  Import:  exe
  Main-is: Janitor.hs

Executable zureg-lambda
  Import:        exe
  Main-is:       Lambda.hs
  Build-depends:
    hal             >= 1.0 && < 1.1,
    wai-handler-hal >= 0.3 && < 0.5
